intrucciones detalladas de instalacion README.md